<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="disabled">Disabled</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Discard</string>
    <string name="advanced_settings">Advanced</string>
    <string name="color_picker_reset_message">Reset color?</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose application</string>
    <string name="navigation_settings_title">Navigation</string>
    <string name="interface_settings_title">Interface</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="status_bar_icons">Status bar icons</string>
    <string name="navigation_settings_options_title">Navigation options</string>
    <string name="app_ops_categories_location">Location</string>
    <string name="app_ops_categories_personal">Personal</string>
    <string name="app_ops_categories_messaging">Messaging</string>
    <string name="app_ops_categories_media">Media</string>
    <string name="app_ops_categories_device">Device</string>
    <string name="app_ops_categories_bootup">Bootup</string>
    <string name="app_ops_categories_su">Superuser</string>
    <string name="app_ops_summaries_coarse_location">coarse location</string>
    <string name="app_ops_summaries_fine_location">fine location</string>
    <string name="app_ops_summaries_gps">GPS</string>
    <string name="app_ops_summaries_vibrate">vibrate</string>
    <string name="app_ops_summaries_read_contacts">read contacts</string>
    <string name="app_ops_summaries_modify_contacts">modify contacts</string>
    <string name="app_ops_summaries_read_call_log">read call log</string>
    <string name="app_ops_summaries_modify_call_log">modify call log</string>
    <string name="app_ops_summaries_read_calendar">read calendar</string>
    <string name="app_ops_summaries_modify_calendar">modify calendar</string>
    <string name="app_ops_summaries_wifi_scan">Wi-Fi scan</string>
    <string name="app_ops_summaries_notification">notification/toast</string>
    <string name="app_ops_summaries_cell_scan">cell scan</string>
    <string name="app_ops_summaries_call_phone">call phone</string>
    <string name="app_ops_summaries_read_sms">read SMS</string>
    <string name="app_ops_summaries_write_sms">write SMS</string>
    <string name="app_ops_summaries_receive_sms">receive SMS</string>
    <string name="app_ops_summaries_receive_emergency_sms">receive emergency SMS</string>
    <string name="app_ops_summaries_receive_mms">receive MMS</string>
    <string name="app_ops_summaries_receive_wap_push">receive WAP push</string>
    <string name="app_ops_summaries_send_sms">send SMS</string>
    <string name="app_ops_summaries_read_icc_sms">read ICC SMS</string>
    <string name="app_ops_summaries_write_icc_sms">write ICC SMS</string>
    <string name="app_ops_summaries_modify_settings">modify settings</string>
    <string name="app_ops_summaries_draw_on_top">draw on top</string>
    <string name="app_ops_summaries_access_notifications">access notifications</string>
    <string name="app_ops_summaries_camera">camera</string>
    <string name="app_ops_summaries_record_audio">record audio</string>
    <string name="app_ops_summaries_play_audio">play audio</string>
    <string name="app_ops_summaries_read_clipboard">read clipboard</string>
    <string name="app_ops_summaries_modify_clipboard">modify clipboard</string>
    <string name="app_ops_summaries_media_buttons">media buttons</string>
    <string name="app_ops_summaries_audio_focus">audio focus</string>
    <string name="app_ops_summaries_master_volume">master volume</string>
    <string name="app_ops_summaries_voice_volume">voice volume</string>
    <string name="app_ops_summaries_ring_volume">ring volume</string>
    <string name="app_ops_summaries_media_volume">media volume</string>
    <string name="app_ops_summaries_alarm_volume">alarm volume</string>
    <string name="app_ops_summaries_notification_volume">notification volume</string>
    <string name="app_ops_summaries_bluetooth_volume">bluetooth volume</string>
    <string name="app_ops_summaries_keep_awake">keep awake</string>
    <string name="app_ops_summaries_monitor_location">monitor location</string>
    <string name="app_ops_summaries_monitor_high_power_location">monitor high power location</string>
    <string name="app_ops_summaries_get_usage_stats">get usage stats</string>
    <string name="app_ops_summaries_mute_unmute_microphone">mute/unmute microphone</string>
    <string name="hardware_keys_lights_enable_title">Hardware key lights settings</string>
    <string name="enable_hw_keys_title">Enable Hardware Buttons</string>
    <string name="keys_bindings_title">Key actions</string>
    <string name="title_pref_menu_location">Menu location</string>
    <string name="summary_pref_menu_location">Where do you want the menu buttons to appear?</string>
    <string name="title_pref_menu_display">Menu visibility</string>
    <string name="summary_pref_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_enable_bar">Enable navigation bar</string>
    <string name="navbar_enable_bar_summary">Enable the navigation bar</string>
    <string name="navbar_can_move">Show landscape</string>
    <string name="navbar_can_move_summary">Shows navigation bar in landscape on the bottom</string>
    <string name="navbar_style_dimen_title">Dimensions</string>
    <string name="navbar_style_dimen_summary">Change navigation bar height</string>
    <string name="navbar_button_title">Buttons</string>
    <string name="navbar_button_summary">Configure the buttons to show on navigation bar</string>
    <string name="navbar_cat">Navigation bar</string>
    <string name="dim_nav_buttons_category">SlimDim</string>
    <string name="dim_nav_buttons_title">Dim buttons after inactivity</string>
    <string name="dim_nav_buttons_summary">Dim navigation bar buttons after not interacting with navigation bar for a specified time</string>
    <string name="dim_nav_buttons_timeout_title">Timeout before dimming</string>
    <string name="dim_nav_buttons_timeout_summary">Time (in milliseconds) to wait before dimming buttons</string>
    <string name="dim_nav_buttons_alpha_title">Dim alpha</string>
    <string name="dim_nav_buttons_alpha_summary">Alpha value to dim buttons to</string>
    <string name="dim_nav_buttons_animate_title">Dim animation</string>
    <string name="dim_nav_buttons_animate_summary">Animate the alpha fade</string>
    <string name="dim_nav_buttons_animate_duration_title">Animation duration</string>
    <string name="dim_nav_buttons_animate_duration_summary">Duration (in milliseconds) of the alpha animation</string>
    <string name="dim_nav_buttons_touch_anywhere_title">Listen for touches on entire screen</string>
    <string name="dim_nav_buttons_touch_anywhere_summary_on">Touching anywhere on the screen will cause buttons to un-dim</string>
    <string name="dim_nav_buttons_touch_anywhere_summary_off">Only touches on the navbar will cause buttons to un-dim</string>
    <string name="nav_bar_button_style">Button style</string>
    <string name="navigation_bar_icon_tint_title">Button color</string>
    <string name="nav_button_color_mode_title">Color mode</string>
    <string name="nav_button_color_mode_dialog_title">Colorize</string>
    <string name="nav_button_color_mode_summary">Change the navigation bar button color mode</string>
    <string name="navigation_bar_glow_tint_title">Button glow color</string>
    <string name="recent_panel_category">Recent apps panel</string>
    <string name="use_slim_recents_title">Slim recents</string>
    <string name="show_running_tasks_title">Only show running apps</string>
    <string name="recents_max_apps_title">Max allowed apps</string>
    <string name="recent_panel_scale_title">Size</string>
    <string name="recent_panel_expanded_mode_title">Expanded mode</string>
    <string name="recent_panel_expanded_mode_summary">Recent tasks expanded preview mode</string>
    <string name="recent_panel_show_topmost_title">Show topmost task</string>
    <string name="recent_panel_show_topmost_summary">Don\'t exclude the topmost task in recents view</string>
    <string name="recent_panel_bg_color_title">Panel background color</string>
    <string name="recent_card_bg_color_title">Card background color</string>
    <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
    <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge</string>
    <string name="status_bar_clock_title">Clock and date style</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="clock_color_title">Color</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_color_override">Use custom color</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="doze_settings_title">Advanced doze options</string>
    <string name="doze_fade_in_pickup_title">Doze pulse fade in (pickup)</string>
    <string name="doze_fade_in_pickup_summary">Time that the screen fades in for notification pulse on pickup (default 100)</string>
    <string name="doze_fade_in_doubletap_title">Doze pulse fade in (doubletap)</string>
    <string name="doze_fade_in_doubletap_summary">Time that the screen fades in for notification pulse on doubletap (default 900)</string>
    <string name="doze_timeout_title">Doze pulse timeout</string>
    <string name="doze_timeout_summary">Time that the screen stays on for notification pulse (default 6000)</string>
    <string name="doze_fade_out_title">Doze pulse fade out</string>
    <string name="doze_fade_out_summary">Time that the screen fades out after notification pulse (default 600)</string>
    <string name="doze_wakeup_doubletap_title">Double-tap to wake on doze</string>
    <string name="doze_wakeup_doubletap_summary_on">Require a double-tap to wake the device on a doze pulse screen</string>
    <string name="doze_wakeup_doubletap_summary_off">Require a simple-tap to wake the device on a doze pulse screen (default)</string>
    <string name="doze_trigger_pickup_title">Pick up gesture trigger</string>
    <string name="doze_trigger_pickup_summary_on">Doze pulse will be triggered by pick up gesture sensor events (default)</string>
    <string name="doze_trigger_pickup_summary_off">Pick up gesture sensor will not be utilized as a triggering mechanism</string>
    <string name="doze_trigger_sigmotion_title">Significant motion trigger</string>
    <string name="doze_trigger_sigmotion_summary_on">Doze pulse will be triggered by significant motion sensor events (default)</string>
    <string name="doze_trigger_sigmotion_summary_off">Significant motion sensor will not be utilized as a triggering mechanism</string>
    <string name="doze_trigger_notification_title">Notification trigger</string>
    <string name="doze_trigger_notification_summary_on">Doze pulse will be triggered by notifications (default)</string>
    <string name="doze_trigger_notification_summary_off">Notifications will not be utilized as a trigger</string>
    <string name="doze_brightness_title">Doze brightness level</string>
    <string name="doze_brightness_summary">Brightness level of doze pulse screen (% of max allowed brightness)</string>
    <string name="gesture_settings_title">Gestures</string>
    <string name="tap_to_wake_title">Tap to wake</string>
    <string name="double_tap_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_sleep_summary">Double-tap on the status bar to turn off the display</string>
</resources>