<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2017 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        xmlns:slim="http://schemas.android.com/apk/res/slim"
        android:title="@string/recent_panel_category">

        <slim.preference.SlimSwitchPreference
            android:key="use_slim_recents"
            android:title="@string/use_slim_recents_title"
            android:defaultValue="true" />

        <slim.preference.SlimSwitchPreference
            android:dependency="use_slim_recents"
            android:key="show_running_tasks"
            android:title="@string/show_running_tasks_title"
            android:defaultValue="false" />

        <slim.preference.SlimSeekBarPreference
            android:dependency="use_slim_recents"
            android:key="recents_max_apps"
            android:title="@string/recents_max_apps_title"
            slim:minValue="5"
            slim:defaultValue="@slim:integer/slim_recents_max_apps_default"
            slim:usePercentage="false" />

        <slim.preference.SlimListPreference
            android:dependency="use_slim_recents"
            android:key="recent_panel_expanded_mode"
            android:entries="@array/recent_panel_expanded_mode_entries"
            android:entryValues="@array/recent_panel_expanded_mode_values"
            android:title="@string/recent_panel_expanded_mode_title"
            android:summary="@string/recent_panel_expanded_mode_summary" />

        <slim.preference.SlimSwitchPreference
            android:dependency="use_slim_recents"
            android:key="recent_panel_lefty_mode"
            android:title="@string/recent_panel_lefty_mode_title"
            android:summary="@string/recent_panel_lefty_mode_summary" />

        <slim.preference.SlimSwitchPreference
            android:dependency="use_slim_recents"
            android:key="recent_panel_show_topmost"
            android:title="@string/recent_panel_show_topmost_title"
            android:summary="@string/recent_panel_show_topmost_summary" />

        <slim.preference.SlimSeekBarPreference
            android:dependency="use_slim_recents"
            android:key="recent_panel_scale_factor"
            android:title="@string/recent_panel_scale_title"
            slim:interval="5"
            slim:defaultValue="100"
            slim:minValue="60" />

        <slim.preference.colorpicker.ColorPickerPreference
            android:dependency="use_slim_recents"
            android:key="recent_panel_bg_color"
            android:title="@string/recent_panel_bg_color_title"
            slim:defaultColor="#00ffffff"
            slim:alphaSliderEnabled="true" />

        <slim.preference.colorpicker.ColorPickerPreference
            android:dependency="use_slim_recents"
            android:key="recent_card_bg_color"
            android:title="@string/recent_card_bg_color_title"
            slim:defaultColor="#00ffffff"
            slim:alphaSliderEnabled="true" />

        <slim.preference.colorpicker.ColorPickerPreference
            android:dependency="use_slim_recents"
            android:key="recent_card_text_color"
            android:title="@string/recent_card_text_color_title"
            slim:defaultColor="#00ffffff"
            slim:alphaSliderEnabled="true" />

</PreferenceScreen>
