<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2013-2017 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slim="http://schemas.android.com/apk/res/slim"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="navbar_button_style"
    android:title="@string/nav_bar_button_style">

    <slim.preference.colorpicker.ColorPickerPreference
        android:key="navigation_bar_button_tint"
        android:title="@string/navigation_bar_icon_tint_title"
        app:defaultColor="#ffffffff"
        slim:listDependency="navigation_bar_button_tint_mode:3" />

    <slim.preference.SlimListPreference
        android:entries="@array/icon_color_mode_entries"
        android:entryValues="@array/icon_color_mode_values"
        android:key="navigation_bar_button_tint_mode"
        android:title="@string/nav_button_color_mode_title"
        android:dialogTitle="@string/nav_button_color_mode_dialog_title"
        android:summary="@string/nav_button_color_mode_summary" />

    <slim.preference.colorpicker.ColorPickerPreference
        android:key="navigation_bar_glow_tint"
        android:title="@string/navigation_bar_glow_tint_title"
        app:defaultColor="#ffffffff" />

</PreferenceScreen>
