<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 SlimRoms Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slim="http://schemas.android.com/apk/res/slim"
    android:title="@string/gesture_settings_title">

    <!--<slim.preference.SlimSwitchPreference
        android:key="double_tap_to_wake"
        android:title="@string/tap_to_wake_title"
        android:summary="@string/tap_to_wake_summary"
        slim:slimSettingType="aosp-secure"
        slim:hidePreference="@*android:bool/config_supportDoubleTapWake" />-->

    <slim.preference.SlimActionsPreference
        android:key="key_wake_action"
        android:title="@string/tap_to_wake_title"
        slim:showWake="true"
        slim:hidePreference="@*android:bool/config_supportDoubleTapWake" />

    <slim.preference.SlimSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_sleep_title"
        android:summary="@string/double_tap_sleep_summary" />

</PreferenceScreen>
