<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2018 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory
                android:key="button_keys"
                android:title="@string/keys_bindings_title" >

            <SwitchPreference
                android:key="enable_hw_keys"
                android:title="@string/enable_hw_keys_title"
                android:defaultValue="true" />

            <com.slim.settings.preference.ButtonBacklightBrightness
                android:dependency="enable_hw_keys"
                android:key="button_backlight"
                android:title="@string/hardware_keys_lights_enable_title"
                android:persistent="false" />

        </PreferenceCategory>

</PreferenceScreen>
